bugfix: align description of section text to left

--- a/css/sectionText.css
+++ b/css/sectionText.css
@@ -2,3 +2,7 @@
   grid-column: span 2;
   text-align: center;
 }
+
+.sectionTextDescription {
+  text-align: left;
+}
